<resources>
    <string name="app_name">JobMaster</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="selected_item">Selected item:</string>

    <string-array name="Languages">
        <item>Accounting or Finance</item>
        <item>Admin or Human Resources</item>
        <item>Arts Media Communications</item>
        <item>Building and Construction</item>
        <item>Computer or information Technology</item>
        <item>Education or Training</item>
        <item>Engineering</item>
        <item>Healthcare</item>
        <item>Hotel and Restaurant</item>
        <item>Manufacturing</item>
        <item>Sales and Marketing</item>
        <item>Sciences</item>
        <item>Services</item>
    </string-array>
    <string name="submitted_lang">Submitted language:</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JobMaster</string>
    <string name="nav_header_subtitle">JobMaster@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="api_key">AIzaSyAMek1W0t-T2Uu_ii79ZwNkLOjtirSs18U</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Post Job</string>
    <string name="skip_intro"> LOG IN </string>
    <string name="next">CREATE NEW ACCOUNT</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_us">Rate us</string>
    <string name="about">About</string>
</resources>